# KeySG

./: .gitignore  README.md  environment.yaml  main_pipeline.py  pyproject.toml
config/: main_pipeline.yaml
config/evaluation/: eval_graph.yaml  scanqa_eval.yaml  sim_search.yaml
dataloader/: hmp3d.py  replica.py  replica_old.py  scannet.py
keysg/: cli.py  graph.py
keysg/rag/: __init__.py  graph_context_retriever.py  graph_rag_utils.py  query_analysis.py  visual_context_retriever.py
keysg/rag/prompts/: entity_extraction.txt
keysg/scene_descriptor/: __init__.py  data_types.py  scene_descriptor.py  utils.py  vlm_provider.py
keysg/scene_segmentor/: __init__.py  extract_nodes.py  floor.py  floor_segmentation.py  obj_node.py  room.py  room_segmentation.py  scene_segmentor.py
keysg/utils/: clip_utils.py  frame_sampler.py  img_utils.py  load_utils.py  logging_setup.py  metrics.py  pcd_utils.py  vis_utils.py
keysg/visualization/: __init__.py  visualizer.py
models/gsam2/: __init__.py  gsam2.py
models/llm/: __init__.py  _common.py  gpt_vlm.py  ollama_genai.py  ollama_vlm.py  openai_api.py  prompts.py  schemas.py  sentence_transformer_embedding.py
scripts/: nr3d_eval.py
