[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keysg"
version = "0.1.0"
description = "KeySG: Hierarchical Keyframe-Based 3D Scene Graphs"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "open3d",
    "viser",
    "supervision",
    "loguru",
    "omegaconf",
    "hydra-core",
    "openai",
    "faiss-cpu",
    "open-clip-torch",
    "pillow",
    "tqdm",
    "shapely",
    "pydantic",
    "hdbscan",
    "scipy",
    "scikit-learn",
    "opencv-python",
    "pycocotools",
    "python-dotenv",
    "sentence-transformers",
    "transformers",
]

[project.scripts]
keysg-build = "keysg.cli:build"
keysg-vis   = "keysg.cli:visualize"

[tool.setuptools.packages.find]
include = ["keysg*"]
